style: stele.css

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ a {
     height: 800px;
     left: 0px;
     top: 0px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(img/fon1.jpg);
+    background-image: url(img/fon11.jpg);
 }
 .lane {
     position: absolute;
